opam-version: "2.0"
name: "x509"
version: "0.6.2"
maintainer: [
  "Hannes Mehnert <hannes@mehnert.org>" "David Kaloper <david@numm.org>"
]
authors: [
  "David Kaloper <david@numm.org>" "Hannes Mehnert <hannes@mehnert.org>"
]
license: "BSD2"
tags: "org:mirage"
homepage: "https://github.com/mirleft/ocaml-x509"
doc: "https://mirleft.github.io/ocaml-x509/doc"
bug-reports: "https://github.com/mirleft/ocaml-x509/issues"
depends: [
  "ocaml" {>= "4.02.2"}
  "dune" {build & >= "1.2.0"}
  "ppx_sexp_conv"
  "result"
  "cstruct" {>= "1.6.0"}
  "sexplib"
  "asn1-combinators" {>= "0.2.0"}
  "ptime"
  "nocrypto" {>= "0.5.3"}
  "astring"
  "ounit" {with-test}
  "cstruct-unix" {with-test & >= "3.0.0"}
]
conflicts: [
  "ppx_sexp_conv" {= "v0.11.0"}
]
build: [
  ["dune" "build" "-p" name]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+https://github.com/mirleft/ocaml-x509.git"
description: "Pure X.509 Public Key Infrastructure in OCaml."
