opam-version: "2.0"
maintainer: [
  "Hannes Mehnert <hannes@mehnert.org>"
]
authors: [
  "Hannes Mehnert <hannes@mehnert.org>"
  "David Kaloper <dk505@cam.ac.uk>"
]
license: "BSD-2-Clause"
tags: "org:mirage"
homepage: "https://github.com/mirleft/ocaml-x509"
doc: "https://mirleft.github.io/ocaml-x509/doc"
bug-reports: "https://github.com/mirleft/ocaml-x509/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.2"}
  "asn1-combinators" {>= "0.2.0"}
  "ptime"
  "base64" {>= "3.3.0"}
  "mirage-crypto"
  "mirage-crypto-pk"
  "mirage-crypto-ec" {>= "0.10.7"}
  "mirage-crypto-rng"
  "mirage-crypto-rng" {with-test & >= "0.11.0"}
  "fmt" {>= "0.8.7"}
  "alcotest" {with-test}
  "gmap" {>= "0.3.0"}
  "domain-name" {>= "0.3.0"}
  "logs"
  "pbkdf"
  "ohex"
  "ipaddr" {>= "5.2.0"}
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirleft/ocaml-x509.git"
synopsis: "Public Key Infrastructure (RFC 5280, PKCS) purely in OCaml"
description: """
X.509 is a public key infrastructure used mostly on the Internet.  It consists
of certificates which include public keys and identifiers, signed by an
authority. Authorities must be exchanged over a second channel to establish the
trust relationship. This library implements most parts of RFC5280 and RFC6125.
The Public Key Cryptography Standards (PKCS) defines encoding and decoding
(in ASN.1 DER and PEM format), which is also implemented by this library -
namely PKCS 1, PKCS 5, PKCS 7, PKCS 8, PKCS 9, PKCS 10, and PKCS 12.
"""

pin-depends: [
  [ "mirage-crypto.dev" "git+https://github.com/mirage/mirage-crypto.git#918bef0ea7b7b71f02d27205a183ea5a709a7424" ]
  [ "mirage-crypto-pk.dev" "git+https://github.com/mirage/mirage-crypto.git#918bef0ea7b7b71f02d27205a183ea5a709a7424" ]
  [ "mirage-crypto-ec.dev" "git+https://github.com/mirage/mirage-crypto.git#918bef0ea7b7b71f02d27205a183ea5a709a7424" ]
  [ "mirage-crypto-rng.dev" "git+https://github.com/mirage/mirage-crypto.git#918bef0ea7b7b71f02d27205a183ea5a709a7424" ]
  [ "pbkdf.dev" "git+https://github.com/dinosaure/ocaml-pbkdf.git#5af4644b88774c1ed3288df4b43256b9a6767e01" ]
]
