(library
 (name x509)
 (public_name x509)
 (private_modules asn_grammars registry authenticator ca certificate validation
                  public_key private_key common crl distinguished_name algorithm
                  extension pem)
 (flags (:standard -safe-string))
 (libraries asn1-combinators rresult fmt ptime cstruct nocrypto astring))
